force-app/main/default/objects/GLB_P1_GrupoEjecutivos__c/GLB_P1_GrupoEjecutivos__c.object-meta.xml
<CustomObject>
    <label>Grupo Ejecutivo</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>N° Ejecutivo de Venta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grupo Ejecutivos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>