force-app/main/default/objects/GLB_P1_GrupoEjecutivos__c/fields/GLB_P1_EjecutivoVenta__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_EjecutivoVenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ejecutivo de venta</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Grupo_Ejecutivos</relationshipName>
    <type>Lookup</type>
</CustomField>