force-app/main/default/objects/GLB_P1_GrupoEjecutivos__c/fields/GLB_P1_OportunidadesAsignadas__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_OportunidadesAsignadas__c</fullName>
    <defaultValue>0</defaultValue>
    <label># Oportunidades asignadas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>