force-app/main/default/objects/GLB_P1_GrupoEjecutivos__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GLB_P1_EjecutivoVenta__c</columns>
    <columns>GLB_P1_OportunidadesAsignadas__c</columns>
    <columns>GLB_P1_Activo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>